<resources>
    <string name="app_name">Words-Filtering3</string>

    <!-- name_layout -->
    <string name="dummy_text">Dummy Text</string>
    <string name="search_name">Search Name</string>
    <string name="no_results_found">No Results Found for %1$s</string>
    <string name="no_recent_search">No Recent Search</string>

    <!-- search_layout -->
    <string name="history">history</string>
    <string name="results">results</string>
    <string name="delete">delete</string>

    <!-- header_layout -->
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="results_found">%1$d FOUND</string>

    <!-- menu_main -->
    <string name="search">Search</string>
    <string name="voice_search">Voice Search</string>
    <string name="close">Close</string>

    <!-- speech to text -->
    <string name="speech_prompt">Say something &#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
</resources>