<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/set_focus"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/voice_search"
        android:icon="@drawable/ic_baseline_keyboard_voice_24"
        android:title="@string/voice_search"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/close"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/close"
        app:showAsAction="always"
        android:visible="false" />
</menu>