<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/history"
        app:layout_constraintBottom_toBottomOf="@+id/results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/results"
        app:srcCompat="@drawable/ic_baseline_history_24" />

    <TextView
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/results"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/restore"
        app:layout_constraintStart_toEndOf="@+id/history"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/results"
        app:srcCompat="@drawable/ic_outline_call_made_24" />
</androidx.constraintlayout.widget.ConstraintLayout>